# libFirmwareUpdatepp

./: CMakeLists.txt  README.md
cmake/modules/: FindLibUSB.cmake
include/libFirmwareUpdate++/: Context.hpp  LogMsg.hpp  UsbId.hpp  dfu.hpp
include/libFirmwareUpdate++/dfu/: DfuDownloader.hpp  DfuFile.hpp  DfuFinder.hpp  DfuInterface.hpp  DfuseOptions.hpp  UsbDfuFuncDescriptor.hpp
src/: CRC32.cpp  CRC32.hpp  Context.cpp  ContextImpl.cpp  ContextImpl.hpp  PackedData.cpp  PackedData.hpp  UsbId.cpp  Util.cpp  Util.hpp
src/dfu/: DfuController.cpp  DfuController.hpp  DfuDownloader.cpp  DfuFile.cpp  DfuFile.hpp  DfuFinder.cpp  DfuFinderImpl.cpp  DfuFinderImpl.hpp  DfuInterface.cpp  UsbDfuFuncDescriptor.cpp  quirks.cpp  quirks.hpp  usb_dfu.hpp
src/dfuse/: DfuseController.cpp  DfuseController.hpp  DfuseFilePart.cpp  DfuseFilePart.hpp  MemLayout.cpp  MemLayout.hpp
